--- a/template.yaml
+++ b/template.yaml
@@ -44,6 +44,26 @@ Resources:
           Properties:
             Path: /listsubhackits
             Method: get
+  GetSubHackitFunction:
+    Type: AWS::Serverless::Function
+    Properties:
+      Handler: app.get_sub_hackit
+      Events:
+        CreateSub:
+          Type: Api
+          Properties:
+            Path: /gethackit
+            Method: post
+  CreatePostFunction:
+    Type: AWS::Serverless::Function
+    Properties:
+      Handler: app.create_post
+      Events:
+        CreateSub:
+          Type: Api
+          Properties:
+            Path: /createpost
+            Method: post
 
 Outputs:
   # ServerlessRestApi is an implicit API created out of Events key under Serverless::Function
