--- a/template.yaml
+++ b/template.yaml
@@ -64,6 +64,26 @@ Resources:
           Properties:
             Path: /createpost
             Method: post
+  CreateUserFunction:
+    Type: AWS::Serverless::Function
+    Properties:
+      Handler: app.create_user
+      Events:
+        CreateSub:
+          Type: Api
+          Properties:
+            Path: /createuser
+            Method: post
+  GetUserFunction:
+    Type: AWS::Serverless::Function
+    Properties:
+      Handler: app.get_user
+      Events:
+        CreateSub:
+          Type: Api
+          Properties:
+            Path: /getuser
+            Method: post
 
 Outputs:
   # ServerlessRestApi is an implicit API created out of Events key under Serverless::Function
