--- a/template.yaml
+++ b/template.yaml
@@ -84,6 +84,16 @@ Resources:
           Properties:
             Path: /getuser
             Method: post
+  GetPostFunction:
+    Type: AWS::Serverless::Function
+    Properties:
+      Handler: app.get_post
+      Events:
+        CreateSub:
+          Type: Api
+          Properties:
+            Path: /getpost
+            Method: post
 
 Outputs:
   # ServerlessRestApi is an implicit API created out of Events key under Serverless::Function
